sfdx-source/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Active_Rate_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Active_Rate_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Active Rate Eligible</label>
    <type>Checkbox</type>
</CustomField>