sfdx-source/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <formula>TEXT(SBQQ__ConfiguredSKU__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family</label>
    <type>Text</type>
</CustomField>