sfdx-source/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Original_Commission__c.field-meta.xml
<CustomField>
    <fullName>Original_Commission__c</fullName>
    <description>LEM-13822:Used in conditions of Price Rules for Commission Rates Stamping</description>
    <label>Original Commission %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>