sfdx-source/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>LEM: 1691 Configure Flat Fee Pricing</description>
    <formula>SBQQ__ConfiguredSKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package</label>
    <type>Text</type>
</CustomField>