sfdx-source/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>LEM-2933- - Move Payment Method to the Package Header Level</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Protocol</valueSetName>
    </valueSet>
</CustomField>