sfdx-source/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Product_Eligible_For_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Product_Eligible_For_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-10841 CCP- Used to identify if a product Option is eligible for product selection/ deselection in manage stores</description>
    <label>Product Eligible For Entitlement</label>
    <type>Checkbox</type>
</CustomField>