sfdx-source/force-app/main/default/objects/SBQQ__ProductOption__c/fields/Trialable__c.field-meta.xml
<CustomField>
    <fullName>Trialable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-333 Initial Setup of Product Option object</description>
    <inlineHelpText>Defines if the Product Option, which is a unique pairing of bundle and option product, is trial eligible.</inlineHelpText>
    <label>Trialable</label>
    <type>Checkbox</type>
</CustomField>